Content closer to the top when in mobile (fixes #2). Shifted alignment for back link

--- a/assets/stylesheets/responsive.sass
+++ b/assets/stylesheets/responsive.sass
@@ -16,6 +16,9 @@
     .background
       display: none
 
+    .content
+      top: $spacing*2
+
     &.what-is
       background: url(/images/mic.jpg)
 
