--- a/assets/stylesheets/the-rough-cuts.sass
+++ b/assets/stylesheets/the-rough-cuts.sass
@@ -123,8 +123,8 @@ form
 .go-home
   display: none
   position: absolute
-  top: $spacing
-  left: $spacing
+  top: $spacing/2
+  left: $spacing/2
   font-size: 1rem
   z-index: 2
   color: white
